--- a/docs/style.css
+++ b/docs/style.css
@@ -277,3 +277,60 @@ footer p {
   font-size: 0.8em;
 }
 
+
+/* Learn More */
+.show-learnMore{
+  background-color: #232f3e;
+  color: #fff;
+  text-align: center;
+  border-radius: 8px;
+  border: 1px solid #ffff;
+  height: 350px;
+  z-index: 1;
+  width: 400px;
+  /* max-width: 300px; */
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  padding: 15px;
+  display: none;
+  padding-top: 8px;
+}
+
+.inforec {
+  text-align: center;
+  /* margin-top: 55px; */
+}
+
+/* .title {
+text-align: center;
+margin-top: 20px;
+height: 30px;
+background-color: black;
+color: white;
+border: none;
+} */
+
+.Learnmore-head {
+color: white;
+font-size: 30px;
+margin-top: 10px;
+}
+
+.close {
+  color: #aaaaaa;
+  /* float: right; */
+  font-size: 20px;
+  /* margin-top: -50px; */
+  cursor: pointer;
+}
+
+.learninfo{
+margin-top: 18px;
+}
+
+
+.learn-button{
+cursor: pointer;
+}
