--- a/docs/style.css
+++ b/docs/style.css
@@ -327,3 +327,16 @@ footer {
 footer p {
   font-size: 0.8em;
 }
+
+button#faqButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
