--- a/docs/style.css
+++ b/docs/style.css
@@ -328,7 +328,7 @@ footer p {
   font-size: 0.8em;
 }
 
-button#faqButton {
+button#redirectButton {
   position: fixed;
   bottom: 20px;
   right: 20px;
