--- a/docs/style.css
+++ b/docs/style.css
@@ -161,6 +161,29 @@ header nav li a {
   text-align: left;
   z-index: 3; /* Increased */
 }
+.fixed-btn{
+  position: fixed;
+  background: #232f3e;
+  width: 180px;
+  height: 45px;
+  line-height: 45px;
+  bottom: 10%;
+  right: 3%;
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: 4px 4px 4px #232f3e;
+  cursor: pointer;
+}
+
+.fixed-btn p{
+  text-transform: capitalize;
+  font-family: Arial, sans-serif;
+  font-weight: 900;
+  color: #fff;
+}
+.fixed-btn:active{
+  box-shadow: 0 0;
+}
 
 /* About Section Styles */
 #about {
