--- a/docs/style.css
+++ b/docs/style.css
@@ -327,3 +327,8 @@ footer {
 footer p {
   font-size: 0.8em;
 }
+.buttonatright{
+  text-align: right;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
