--- a/docs/style.css
+++ b/docs/style.css
@@ -327,3 +327,36 @@ footer {
 footer p {
   font-size: 0.8em;
 }
+.container{
+  width: 100%;
+  height: 700px;
+  padding: 50px 0;
+}
+.content{
+  width: 600px;
+  margin: 0 auto;
+}
+.content p{
+  padding-bottom: 15px;
+}
+.fixed-btn{
+  position: fixed;
+  background: #0facf3 ;
+  width: 180px;
+  height: 45px;
+  line-height: 45px;
+  bottom: 10%;
+  right: 3%;
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: 4px 4px 4px #0a78aa;
+}
+.fixed-btn p{
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 900;
+  color: #fff;
+}
+.fixed-btn:active{
+  box-shadow: 0 0 ;
+}
