--- a/docs/style.css
+++ b/docs/style.css
@@ -15,7 +15,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #005276;
+  background-color: #0f1d2d;
   color: #fff;
   padding: 10px;
 }
@@ -46,9 +46,9 @@ header nav li a {
 
 /* AWS Section Styles */
 .aws-section {
-  background-color: #005276;
+  background-color: rgb(9, 14, 30);
   color: white;
-  padding: 80px 0;
+  height: 450px;
   position: relative; 
 }
 
@@ -57,7 +57,7 @@ header nav li a {
 }
 
 .slick-dots{
-  bottom: -150px !important;
+  bottom: -35px !important;
 }
 
 .aws-section h2 {
@@ -72,32 +72,78 @@ header nav li a {
 /* Slider Styles */
 .slider {
   margin: 0 auto;
-  max-width: 800px;
+  width: 100%;
   height: 100%;
+  position: relative;
+  display: inline-block;
 }
 
-.slide {
+.slide, .slide1 {
   text-align: center;
-  height: 500px; /* Set a fixed height for the slide */
+  height: 100%;
   background-size: cover;
   background-position: center;
+  z-index: 2;
+  position: relative;
 }
 
+.carousel1{
+  display: block;
+  width: 50%;
+  object-fit: cover;
+  margin-left: 50%;
+  height: 435px;
+  z-index: 1;
+  filter: brightness(70%);
+  
+}
+
+.slide1 h2 {
+  color: #ffffff;
+  font-size: 2em;
+  margin-bottom: 10px;
+  padding: 20px;
+  position: absolute;
+  top: 34%;
+  left: 25.5%;
+  transform: translate(-50%, -50%);
+  z-index: 3; /* Increased */
+  width: 50%;
+  padding-left: 70px;
+  text-align: left;
+}
 
 .slide h2 {
   color: #ffffff;
   font-size: 2em;
   margin-bottom: 10px;
+  padding: 20px;
+  position: absolute;
+  top: 55%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+  z-index: 3; /* Increased */
+  width: 50%;
+  padding-left: 70px;
+  text-align: left;
 }
 
-.slide h3 {
+.slide h3, .slide1 h3 {
   color: #c1c1c1;
   font-size: 1.5em;
   margin-bottom: 20px;
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translate(-50%, -50%);
+  z-index: 3; /* Increased */
+  width: 30%;
+  text-align: left;
 }
 
 .slide p {
   color: #bfbfbf;
+  /* z-index: 1; */
 }
 
 .aws-section-button {
@@ -108,12 +154,17 @@ header nav li a {
   padding: 10px 20px;
   font-size: 1.2em;
   cursor: pointer;
-  margin-top: 20px;
+  position: absolute;
+  top: 72%;
+  left: 9.5%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  z-index: 3; /* Increased */
 }
 
 /* About Section Styles */
 #about {
-  padding: 50px 0;
+  padding: 45px 0;
   max-width: 800px;
   margin: 0 auto;
 }
@@ -164,64 +215,6 @@ header nav li a {
 .events-container li {
   margin-bottom: 10px;
 }
-
-/* Blog Section Styles */
-
-section.solutions {
-  padding: 40px;
-  background-color: #f7f7f7;
-  text-align: center;
-}
-
-h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #232f3e;
-}
-
-.solution-card {
-  display: inline-block;
-  border-top:5px solid #232f3e;
-  vertical-align: top;
-  width: 300px;
-  padding: 20px;
-  margin-right: 20px;
-  background-color: #fff;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  text-align: left;
-}
-
-.solution-card img {
-  width:20%;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.solution-card h3 {
-  font-size: 18px;
-  margin-bottom: 10px;
-  color: #232f3e;
-}
-
-.solution-card p {
-  margin-bottom: 20px;
-  color: #6c757d;
-}
-
-.learn-more {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color:  #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-}
-
-.view-more {
-  padding-top: 20px;
-}
-
 
 /* Resources Section Styles */
 #resources {
