--- a/docs/style.css
+++ b/docs/style.css
@@ -217,6 +217,63 @@ header nav li a {
   margin-bottom: 10px;
 }
 
+/* Blog Section Styles */
+
+section.solutions {
+  padding: 40px;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #232f3e;
+}
+
+.solution-card {
+  display: inline-block;
+  border-top: 5px solid #232f3e;
+  vertical-align: top;
+  width: 300px;
+  padding: 20px;
+  margin-right: 20px;
+  background-color: #fff;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  text-align: left;
+}
+
+.solution-card img {
+  width: 20%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.solution-card h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #232f3e;
+}
+
+.solution-card p {
+  margin-bottom: 20px;
+  color: #6c757d;
+}
+
+.learn-more {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.view-more {
+  padding-top: 20px;
+}
+
 /* Resources Section Styles */
 #resources {
   padding: 50px 0;
